--- a/templates/addAppointment.html
+++ b/templates/addAppointment.html
@@ -37,7 +37,7 @@
                         <li>   <a href="/addAppointment">Add meeting </a></li>
                         <li>   <a href="/showAppointments">My meeting </a></li>
                         <li>  <a href="#">Profile </a></li>
-                        <li> <a  type="button" href="logoutUser"><button id="logout">Logout</button></a></li>
+                        <li> <a  type="button" href="logoutUser"><button id="logout">Logout</button></a><li>
                     </ul>  
                 </div>
                 <div id="outsideham">
@@ -45,9 +45,7 @@
                 </div>
            </p>
     
-
-           <img src="../static/imgs/cl.png" style="height:650x; width:650px; margin-top:-110px;">  
-
+        <img src="../static/imgs/cl.png" style="height:550px; width:550px; margin-top:-50px; margin-left:60px;">
    
 
 <form action="addAppointment" method="post">
@@ -58,24 +56,23 @@
 
     <textarea  placeholder="Meeting Description" id="description" name="description" class="dscbox" minlength="10"></textarea>
 
-    <div name="apptype">
+    <div name="urgency">
                    
-                   <select class="typebox" required placeholder="Meeting type" name="apptype" style="border-radius:15p;"> 
-                       <option value="" disabled selected hidden>Meeting type</option>
-                       <option value="upcoming" name="apptype">Upcoming</option>
-                       <option value="undecided" name="apptype">To be decided</option>
-                       <option value="completed" name="apptype">Completed</option>
+                   <select class="urgbox" required placeholder="Urgency" name="urgency" style="border-radius:15px;"> 
+                       <option value="" disabled selected hidden>Urgency</option>
+                       <option value="high" name="urgency">High</option>
+                       <option value="low" name="urgency">Low</option>
                     </select>
                 </p>
     </div>
 
-    <div name="urgency">
+    <div name="type">
                    
-                   <select class="urgbox" required placeholder="Urgency" name="urgency" style="border-radius:15p;"> 
-                       <option value="" disabled selected hidden>Urgency</option>
-                       <option value="high" name="urgency">High</option>
-                       <option value="low" name="urgency">Low</option>
-                       {% comment %} <option value="completed" name="urgency">Completed</option> {% endcomment %}
+                   <select class="typebox" required placeholder="Meeting type" name="type" style="border-radius:15px;"> 
+                       <option value="" disabled selected hidden>Meeting type</option>
+                       <option value="upcoming" name="urgency">Upcoming</option>
+                       <option value="undecided" name="urgency">To be decided</option>
+                       <option value="completed" name="urgency">Completed</option>
                     </select>
                 </p>
     </div>
@@ -85,7 +82,7 @@
 
     <input type="time" class="timebox" id="meettime" name="time" required>
 
-    <input class="emailbox" id="email" name="email" required placeholder="Member's emails:">
+    <textarea  placeholder="Member's Emails" id="emails" name="emails" class="emailbox" minlength="10"></textarea>
 
 
     <input id="donebutton" class="Donebtn" type ="submit" value= "Done" >
