--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,35 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>heading </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="../static/profile.css">    
+    <title>Profile</title>
 </head>
 <body>
-    <!-- <a href="https://www.google.com"target= "_blank">
-        <img  src="bag.jpeg" alt="" width= "300">
-    </a> -->
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">Calander</a>
-        <a href="#contact">About</a>
-        <a href="#about">Contact us </a>
-      </div>
-
-      <nav class="w3-sidenav w3-white" style="width:25%">
-      <ol>
-      <li>  <a href="#">Dashboard </a></li>
-      <li>   <a href="#">Add meeting </a></li>
-      <li>   <a href="#">My meeting </a></li>
-      <li>  <a href="#">Profile </a></li>
-
-      </ol>  
+   
+    <p>
+                <div id="mySidenav" class="sidenav">
+                    <div class="insidehamburger">
+                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&#9776;</a>   
+                    </div>
+                    <span id= "dot1"></span>
+                    <ul class="meetbar">      
+                        <li>  <a href="/showAppointments">Dashboard </a></li>
+                        <li>   <a href="/addAppointment">Add meeting </a></li>
+                        <li>   <a href="/showAppointments">My meeting </a></li>
+                        <li>  <a href="/profile">Profile </a></li>
+                        <li> <a  type="button" href="/logoutUser"><button id="logout">Logout</button></a><li>
+                    </ul>  
+                </div>
+                <div id="outsideham">
+                    <span class="menu" style="font-size:36px;cursor:pointer" onclick="openNav()">&#9776; </span>
+                </div>
+           </p>
   
-</nav>
-<input type ="button" value= "Edit" >
-<br>
-    Name :Mr. Ram Sita Raju<br>
-    Email : ram.s.r1985@gmail.com<br>
-    occupation : Product Manager <br>
 
+<img src="../static/imgs/profile.png" style="height:280px; width:280px;  display:block; margin-left: auto; margin-right: auto;">
+<br>
+
+<div class="text-center" id="info">
+    Name: Mr. Ram Sita Raju<br>
+    Email: ram.s.r1985@gmail.com<br>
+    Occupation: Product Manager <br>
+</div>
+
+<script>
+    function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+    }
+    
+    function closeNav() {
+      document.getElementById("mySidenav").style.width = "0px";
+    }
+
+    
+    setTimeout(()=>{
+        var alertId = document.getElementById('myAlert')
+        alertId.classList.add('modal')
+    },2000);
+</script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 </html>
