--- a/templates/showAppointments.html
+++ b/templates/showAppointments.html
@@ -34,8 +34,8 @@
                         <li>  <a href="/showAppointments">Dashboard </a></li>
                         <li>   <a href="/addAppointment">Add meeting </a></li>
                         <li>   <a href="/showAppointments">My meeting </a></li>
-                        <li>  <a href="#">Profile </a></li>
-                        <li> <a  type="button" href="logoutUser"><button id="logout">Logout</button></a><li>
+                        <li>  <a href="/profile">Profile </a></li>
+                        <li> <a  type="button" href="/logoutUser"><button id="logout">Logout</button></a><li>
                     </ul>  
                 </div>
                 <div id="outsideham">
