--- a/static/addmeet.css
+++ b/static/addmeet.css
@@ -5,7 +5,7 @@ ul.meetbar {
 
 body {
   font-family: "Lato", sans-serif;
-  background: url('../static/imgs/appback2.jpg');
+  background: url('../static/imgs/4380.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 1.0;
@@ -120,12 +120,14 @@ nav{
     height: 50px;
     width: auto;
     /* background-color: #d1d1d1; */
-    border: 0px;
+
+    border-radius: 5px;
+    border: 2px solid black; 
     font-size: 30px;
     font-weight: 900;
     color: #233554;
     font-family: "Lato", sans-serif;
-    margin-left: 940px;
+    margin-left: 1050px;
     margin-top: 0px;
 }
 
@@ -148,7 +150,7 @@ nav{
   box-sizing: border-box;
   box-shadow: 0px 4px 50px 10px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
-  margin-left: 550px;
+  margin-left: 350px;
 }
 .titlebox{
   position: absolute;
@@ -167,7 +169,7 @@ nav{
   width: 100px;
   height: 50px;
   top: 340px;
-  margin-left: 810px;
+  margin-left: 610px;
 }
 .datebox{
   position: absolute;
@@ -180,15 +182,15 @@ nav{
   width: 340px;
   height: 50px;
   top: 530px;
-  margin-left: 810px;
+  margin-left: 610px;
 }
 
 .emailbox{
 position: absolute;
 width: 340px;
-height: 50px;
+height: 70px;
 top: 600px;
-margin-left: 810px;
+margin-left: 610px;
 }
 
 .typebox{
@@ -197,7 +199,7 @@ margin-left: 810px;
   width: 150px;
   height: 50px;
   top: 340px;
-  margin-left: 1000px;
+  margin-left: 800px;
 }
 input{
     border: none;
