--- a/static/contact.css
+++ b/static/contact.css
@@ -1,109 +1,70 @@
-body {
-    background-image: url("/static/imgs/contactBG.png");
-    color: white;
+body{
+    background-image: url('../static/imgs/contactBG.png');
     background-repeat: no-repeat;
-    -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-::placeholder {
+    background-size: cover;
     color: #FFFFFF;
-    opacity: 0.6;
-    padding-left: 20px;
 }
 
-input {
-    position: absolute;
-    width: 330px;
-    height: 50px;
-    left: 600px;
-    top: 1700px;
-    background: rgba(196, 196, 196, 0.25);
-    box-shadow: 0px 4px 50px 2px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 33px;
+::placeholder { 
+        color:#FFFFFF;
+        opacity: 0.6; 
+        padding-left: 20px;
 }
 
-nav{
-    background-color: #233554;
-     height: 85px; 
-    font-family: Open Sans;
+    nav{
+        background-color: #233554;
+         height: 70px; 
+        font-family: Open Sans;
     font-style: normal;
     }
-
-  #a,#b,#c,#d{
-    margin-right: 200px;
+    
+    #a,#b,#c,#d,#e{
+        margin-right: 150px;
     }
+    
+#links{
+    margin-left: 350px;
+    float: right;
+}
 
-  #a{
-    margin-left: 85px;
-  }  
-  .nav-item{
-    margin-top: 15px;
+    .nav-item{
+        margin-top: 15px;
     }
-
-#name {
-    top: 500px;
-}
-
-#email {
-    top: 575px;
-}
-
-#purpose {
-    top: 650px;
-}
-
-#contact {
-    margin-top: 20px;
-    margin-right: 815px;
-    display: inline;
-    float: right;
-}
-
-#company {
-    margin-top: 20px;
-    margin-left: 100px;
-    display: inline;
-    float: left;
-}
-
-#heading {
-    margin-top: 70px;
-    margin-right: 750px;
-    float: right;
-}
-
-#image {
-    height: 200px;
-    width: 200px;
-    margin-left: 100px;
-    margin-top: 40px;
-}
-
-#whatwedotext{
-    float: right;
-    margin-right: 700px;
-    width: 500px;
-    margin-bottom: 100px;
-    margin-left: 100px;
-}
-
-#logout{
-    /* margin-right: 100px; */
-    border-radius: 15px;
-    height: 40px;
-    width: 90px;
-    margin-top:25px;
-    border: 2px white solid;
-    font-size: 20px;
-    padding: 5px;
-    color: white;
-    background-color: #233554;
-  }
+    input{position: absolute;
+        width: 330px;
+        height: 50px;
+        left: 600px;
+        top: 1700px;
+        
+        background: rgba(196, 196, 196, 0.25);
+        box-shadow: 0px 4px 50px 2px rgba(0, 0, 0, 0.25);
+        border-radius: 15px;
+      
+      font-family: Open Sans;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 33px;}
+    
+    #name{top: 500px;}
+    #email{top: 575px;}
+    #purpose{top: 650px;}
+    #contact{margin-top:20px;
+        margin-right:815px;
+        display: inline;
+        float:right;}
+    #company{margin-top:20px;
+        margin-left:100px;
+        display: inline;
+        float:left;}  
+    #heading{margin-top:70px;
+        margin-right:750px;
+        float: right;}     
+    #image{height:330px;
+            width:330px;
+            margin-left:100px;
+            margin-top:40px;}    
+    #text{margin-top:-250px;
+      margin-left:600px;
+      float:right;
+    }  
