--- a/static/meetings.css
+++ b/static/meetings.css
@@ -7,7 +7,11 @@ ul.meetbar {
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #d1d1d1;
+    /* background-color: #d1d1d1; */
+    background-image: url(../static/imgs/4380.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0px;
   }
 
 article {
