--- a/templates/addAppointment.html
+++ b/templates/addAppointment.html
@@ -36,8 +36,8 @@
                         <li>  <a href="/showAppointments">Dashboard </a></li>
                         <li>   <a href="/addAppointment">Add meeting </a></li>
                         <li>   <a href="/showAppointments">My meeting </a></li>
-                        <li>  <a href="#">Profile </a></li>
-                        <li> <a  type="button" href="logoutUser"><button id="logout">Logout</button></a><li>
+                        <li>  <a href="/profile">Profile </a></li>
+                        <li> <a  type="button" href="/logoutUser"><button id="logout">Logout</button></a><li>
                     </ul>  
                 </div>
                 <div id="outsideham">
@@ -45,16 +45,16 @@
                 </div>
            </p>
     
-        <img src="../static/imgs/cl.png" style="height:550px; width:550px; margin-top:-50px; margin-left:60px;">
+        {% comment %} <img src="../static/imgs/cl.png" style="height:550px; width:550px; margin-top:-50px; margin-left:60px;"> {% endcomment %}
    
 
 <form action="addAppointment" method="post">
 
 {% csrf_token %}
 
-    <input  placeholder="Meeting Title" id="meetTitle" name="name" class="titlebox" minlength="5">
+    <input  placeholder="Meeting Title" id="meetTitle" name="name" class="titlebox" minlength="5" title="Minimum length required is 5.">
 
-    <textarea  placeholder="Meeting Description" id="description" name="description" class="dscbox" minlength="10"></textarea>
+    <textarea  placeholder="Meeting Description" id="description" name="description" class="dscbox" minlength="10" title="Minimum length required is 10."></textarea>
 
     <div name="urgency">
                    
@@ -66,9 +66,9 @@
                 </p>
     </div>
 
-    <div name="type">
+    <div name="apptype">
                    
-                   <select class="typebox" required placeholder="Meeting type" name="type" style="border-radius:15px;"> 
+                   <select class="typebox" required placeholder="Meeting type" name="apptype" style="border-radius:15px;"> 
                        <option value="" disabled selected hidden>Meeting type</option>
                        <option value="upcoming" name="urgency">Upcoming</option>
                        <option value="undecided" name="urgency">To be decided</option>
@@ -82,7 +82,7 @@
 
     <input type="time" class="timebox" id="meettime" name="time" required>
 
-    <textarea  placeholder="Member's Emails" id="emails" name="emails" class="emailbox" minlength="10"></textarea>
+    <textarea  placeholder="Member's Emails (email1, email2, ...)" id="emails" name="email" class="emailbox" minlength="10" title="Seperate the mails with ,"></textarea>
 
 
     <input id="donebutton" class="Donebtn" type ="submit" value= "Done" >
